syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

option csharp_namespace = "User.V1";
option go_package = "user/v1";

message UserModel {
    string username = 1; 
    string email = 2;
    uint32 age = 3;
    float weight = 4;
    google.protobuf.Struct metadata = 5;
}

message CreateRequest {
    string username = 1;
    string email = 2;
    uint32 age = 3;
    float weight = 4;
    google.protobuf.Struct metadata = 5;
}

message CreateResponse {
    UserModel user = 1;
}

service UserService {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/users"
      body: "*"
    };
  }
}